[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Board/BoardTile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.32233, 31.906 )

[node name="BoardTile" type="Node2D" groups=[
"Tiles",
]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
scale = Vector2( 6, 1 )
shape = SubResource( 1 )

[node name="DebugSprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )
centered = false

[node name="DebugLabel" type="Label" parent="Area2D"]
margin_left = 4.5
margin_top = 5.25
margin_right = 45.5
margin_bottom = 22.25
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
